force-app/main/default/objects/Map_County__c/Map_County__c.object-meta.xml
<CustomObject>
    <label>Map County</label>
    <nameField>
        <label>County Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Map Counties</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>