force-app/main/default/objects/Map_County__c/fields/Clientele_County_ID__c.field-meta.xml
<CustomField>
    <fullName>Clientele_County_ID__c</fullName>
    <externalId>true</externalId>
    <label>Clientele_County_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>