force-app/main/default/objects/Map_County__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>State</label>
    <referenceTo>Map_State__c</referenceTo>
    <relationshipName>Counties</relationshipName>
    <type>Lookup</type>
</CustomField>